demo-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata: 
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: tanzuacrdemo.azurecr.io/testdemoapp:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: acr-satya
