demo-app/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend
spec:
    ports:
    - port: 80
      targetPort: 80
    selector:
        app: frontend
